--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -41,10 +41,14 @@
     }
 }
 
+
+
  
 .container-blogs {
     margin-top: 40px;
     margin-bottom: 20px;
+    width: 100%;
+    max-width: 300px;
 }
 
  
