--- a/public/css/all_blog.css
+++ b/public/css/all_blog.css
@@ -1,3 +1,207 @@
-h1{
-    background-color: aqua;
+html{
+    font-size: 62.5%;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+.blog-post{
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    color: #333;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+}
+.blog-container{
+    max-width: 800px;
+    width: 100%;
+    margin: 2rem auto;
+}
+.categoria{
+    background-color: #98D8DF;
+    border: 2px solid #98D8DF;
+    border-radius: 20px;
+    padding: 6px;
+    font-weight: 550;
+}
+.blog-header{
+    text-align: left;
+    margin-bottom: 20px;
+}
+.blog-header h1{
+    font-size: 4rem;
+    margin-bottom: 2.5rem;
+    text-align: center;
+    margin-top: 2rem;
+    color: rgb(1, 1, 53);
+    font-weight: bold;
+}
+.blog-banner{
+    width: 100%;
+    position: relative;
+    display: inline-block;
+}
+.blog-banner img.imgprin{
+    object-fit: cover;
+    height: 300px;
+    width: 100%;
+}
+.blog-banner img{
+    display: block;
+    max-width: 100%;
+    border-radius: 3%;
+}
+.text-box{
+    position: absolute;
+    top: 20%;
+    background-color: rgba(0, 47, 108, 0.8);
+    color: white;
+    padding: 20px;
+    max-width: 60%;
+    border-radius: 0 10px 10px 0;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+.text-box p{
+    margin: 0;
+    font-family: Arial, sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-left: 5px solid white;
+    padding: 1rem;
+    margin-left: 2rem;
+    word-wrap: break-word;
+}
+.blog-main{
+    margin-top: 2.5rem;
+    text-align: center;
+}
+.blog-main article{
+    text-align: left;
+    margin: auto;
+}
+.meta{
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.9rem;
+    color: #ABADBA;
+    margin: 10px 0;
+}
+.neon-logo{
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+}
+.logo-blog{
+    border-radius: 50%;
+    width: 7%;
+}
+.logo-span{
+    margin-left: 1rem;
+    color: #ABADBA;
+}
+.blog-main h2{
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+    margin-top: 2rem;
+    font-weight: 500;
+    line-height: normal;
+    color: black;
+}
+.blog-body{
+    display: flex;
+}
+.blog-body img{
+    float: left; 
+    margin-right: 10px;
+    width: 350px;
+    height: 450px;
+    object-fit: cover;
+    border-radius: 3%;
+}
+.blog-body p{
+    text-align: justify;
+    font-size: 14px;
+}
+.container-video{
+    width: 100%;
+}
+
+.container-video {
+    margin-top: 7%;
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* Proporción 16:9 */
+    height: 0;
+    overflow: hidden;
+}
+
+.container-video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.otros{
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px 0;
+}
+
+.container-otros{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.container-otros h2{
+    font-size: 24px;
+    color: #030d3e;
+    font-weight: bold;
+}
+
+.container-otros a{
+    font-size: 14px;
+}
+
+.container-otros-body{
+    display: flex;
+    gap: 20px;
+}
+
+.otros-article{
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 100%;
+    max-width: 300px;
+}
+
+.otros-article img{
+    width: 100%;
+    height: auto;
+}
+
+.otros-info{
+    padding: 10px;
+}
+
+.otros-info span{
+    display: block;
+    font-size: 12px;
+    color: #6c757d;
+    margin-bottom: 5px;
+}
+
+.otros-info h3{
+    margin: 0;
+    font-size: 16px;
+    color: #333;
+    font-weight: bold;
 }
