--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -22,7 +22,7 @@
 
 
 .title-blog{
-    font-size: 7rem;
+    font-size: 10rem !important;
     font-weight: 700;
     letter-spacing: 1.5rem;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
