--- a/public/css/estilos-blog.css
+++ b/public/css/estilos-blog.css
@@ -86,10 +86,12 @@ body {
     justify-content: center;
     margin-top: 50px;
     gap: 50px;
+    font-weight: 400;
+    
 
 }
 h1 {
-    font-size: 6rem;
+    font-size: 3rem;
     margin: 20px 0; 
     text-align: center;
     width: 100%;
@@ -104,6 +106,12 @@ h1 {
     display: flex;
     flex-direction: column; /* Alinea los elementos verticalmente */
     align-items: center; /* Centra horizontalmente */
+}
+
+.contenedor-principal h1 {
+    font-size: 5rem !important;
+    font-weight: 700;
+    font-family: 'Franklin Gothic Medium';  
 }
 
 .contenedor {
@@ -174,7 +182,7 @@ h1 {
 }
 
 h2 {
-    font-size: 43px; /* Tamaño de fuente más grande para el título */
+    font-size: 30px; /* Tamaño de fuente más grande para el título */
     margin: 0;
 }
 
@@ -228,7 +236,8 @@ h2 {
 }
 
 .barra-lateral li {
-    
+    font-weight: 400;
+
     font-size: 14px; /* Tamaño de fuente para los elementos de lista */
     line-height: 1.6; /* Espaciado entre líneas para una mejor legibilidad */
 }
@@ -284,6 +293,7 @@ header{
   font-size: 1.5rem;
   padding: 20px 0px;
 }
+
 
 .blog-header{
   font-size: 1.5rem;
