--- a/public/css/estilos-blog.css
+++ b/public/css/estilos-blog.css
@@ -114,7 +114,7 @@ h1 {
     font-size: 5rem !important;
     font-weight: 700;
     font-family: 'Franklin Gothic Medium';  
-    color:  #02B8AE;
+    color:  black;
     text-shadow: 
     2px 2px 0px black, /* Sombra abajo a la derecha */
     -2px 2px 0px white, /* Sombra abajo a la izquierda */
