MODIFICACION DEL HEADER Y MAPA

--- a/public/css/shared/header.css
+++ b/public/css/shared/header.css
@@ -36,6 +36,8 @@ a{
 	align-items:center;
 	font-family:'Proxima-Nova-Regular';
 	top:0;
+	z-index: 100;
+	position: sticky;
 }
 .header .logo-container{
 	width:220px;
