--- a/admin/public/css/gallery.css
+++ b/admin/public/css/gallery.css
@@ -98,16 +98,17 @@
 }
 
 .product {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  width: 60%; /* Reduce el ancho para que las imágenes ocupen menos espacio */
   margin-bottom: 20px;
   background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  vertical-align: top;
 }
 .subtitulo-product {
-  margin-top: 5px;
-  width: 70%;
   margin-top: 50px;
+  width: 70%;
   color: #2c3e50;
   text-align: center;
   font-weight: 300;
@@ -121,23 +122,28 @@
   text-shadow: 3px 2px 1px saddlebrown;
 } */
 .img-product {
-
-  border-radius: 20px;
+  max-width:100%; /* Cambia este valor para ajustar el tamaño */
+  height: auto;
+  border-radius: 10px;
   width: 100%;
   padding: 10px 0px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  animation: imagenFade;
+/*  animation: imagenFade;
   animation-timing-function: linear;
   animation-duration: 1s;
-  animation-iteration-count: 1;
+  animation-iteration-count: 1;*/
   align-items:center;
 }
 .img-product img{
   max-width: 95%;
   border-radius: 10px;
   height :auto;
+  animation: imagenFade;
+  animation-timing-function: linear;
+  animation-duration: 1s;
+/*  animation-iteration-count: 1;*/
 }
 .img-product img:hover{
   filter: contrast(90%);
@@ -194,5 +200,140 @@
   .img-product img {
     max-width: 90%;
     height: auto;
+  }
+}
+
+@media (max-width: 800px) {
+  .img-product img {
+    max-width: 70%; /* Ajusta el tamaño para pantallas medianas */
+  }
+}
+
+@media (max-width: 500px) {
+  .img-product img {
+    max-width: 90%; /* Ajusta el tamaño para pantallas pequeñas */
+  }
+}
+
+.pagination {
+  text-align: center;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.page-link {
+  display: inline-block;
+  padding: 8px 12px;
+  margin: 4px;
+  border: 1px solid #ddd;
+  color: #007bff;
+  text-decoration: none;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.page-link.active {
+  background-color: #007bff;
+  color: white;
+  border-color: #007bff;
+}
+
+.page-link:hover {
+  background-color: #ddd;
+}
+
+span {
+  padding: 8px 12px;
+  margin: 4px;
+}
+
+.prev, .next {
+  font-weight: bold;
+}
+
+
+/* Ajustes para pantallas pequeñas */
+@media (max-width: 500px) {
+  .pagination {
+    flex-direction: column; /* Cambia la dirección a columna en pantallas pequeñas */
+    align-items: center;
+  }
+
+  .page-link {
+    padding: 6px 10px; /* Reduce aún más el padding para pantallas pequeñas */
+    margin: 2px 0; /* Ajusta el margen para pantallas pequeñas */
+    width: 100%; /* Asegura que cada link ocupe todo el ancho disponible */
+    text-align: center;
+  }
+}
+
+/*
+
+Formulario
+ */
+.goto-page {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.goto-page input {
+  width: 60px;
+  padding: 5px;
+  margin-right: 5px;
+}
+
+.goto-page button {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.goto-page button:hover {
+  background-color: #0056b3;
+}
+
+
+/* */
+
+.loading-container {
+  position: relative;
+  width: 100%;  /* Ajusta el ancho al del contenedor */
+  height: 100%; /* Ajusta la altura al contenedor */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.gallery-image {
+  display: none; /* Ocultar la imagen inicialmente */
+  width: 100%;  /* Asegura que la imagen tome el ancho del contenedor */
+  height: auto;
+  border-radius: 10px;
+  opacity: 0;
+  transition: opacity 0.1s ease-in-out; /* Suaviza la transición de la opacidad y la hace más rápida */
+}
+
+.loading-spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  border-top: 4px solid #007bff;
+  width: 40px;
+  height: 40px;
+  animation: spin 0.5s infinite linear; /* Reduces la duración de la animación para que sea más rápida */
+  z-index: 10; /* Asegura que esté encima de la imagen */
+}
+
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
