--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -5,9 +5,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', 'sans-serif';
+    font-family: 'Proxima-Nova-Regular';
 }
-
 
 
 .image_blog{
