--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -3,6 +3,10 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+* {
+    box-sizing: border-box;
+    font-family: 'Proxima-Nova-Regular';
+}
 /* Hero */
 .hero_container{
     width: 100%;
