--- a/public/css/proyectos.css
+++ b/public/css/proyectos.css
@@ -1,24 +1,44 @@
 /* Proyectos destacados */
+
+* {
+    box-sizing: border-box;
+    font-family: 'Proxima-Nova-Regular';
+}
 .pry-dest-container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 60px;
+    background: linear-gradient(to right, #717375, #afe2e2);
 }
 
-.pry-dest-container h2{
+.pry-dest-container h2 {
     text-transform: uppercase;
-    font-size: 36px;
-    color: #0e4b9c;
+    font-size: 66px;
+    color: whitesmoke;
     font-family: 'Proxima-Nova-Light';
+    margin-top: 180px;
     margin-bottom: 40px;
+    text-align: center;
+    width: 30%;
+    margin-left: 10%;
+    margin-right: auto;
+    font-weight: 200%;
+    text-shadow: 
+    3px 3px 1px rgb(27, 182, 174),
+    5px 5px 2px rgb(193, 227, 247),
+    8px 8px 3px blue;
+    ;
 }
+
 
 .pry-dest-container .pry-dest-video{
-    width: 100%;
+    width: 40%;
     display: flex;
-    justify-content: center;
+    margin-left: auto;
+    margin-right: 10%;
     margin-bottom: 40px;
+    margin-top: 100px;
 }
 
 .pry-dest-container .pry-dest-video .video-container{
@@ -42,12 +62,12 @@
     transform: scale(1.3);
 }
 
-
 .pry-dest-container p{
     font-family: 'Proxima-Nova-Light';
     text-transform: uppercase;
-    color: grey;
-    font-size: 50px;
+    margin-bottom: 40px;
+    color: rgb(255, 255, 255);
+    font-size: 45px;
 }
 
 .pry-nuevos-container h2{
@@ -66,34 +86,16 @@
 }
 
 .pry-nuevos-container .pry-nuevos-desc .pry{
-    width: 40%;
+    width: 45%;  /* Aumentar el ancho de cada contenedor de video */
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
 
 .pry-nuevos-container .pry-nuevos-desc .pry .img-container{
-    width: 55%;
-    height: 500px;
-    margin-bottom: 20px;
-    overflow: hidden;
-}
-
-.pry-nuevos-container .pry-nuevos-desc .pry .img-container a,
-.pry-nuevos-container .pry-nuevos-desc .pry .img-container a img{
     width: 100%;
-    height: 100%;
-}
-.pry-nuevos-container .pry-nuevos-desc .pry .img-container a img{
-    transform: scale(1);
-    transition: .8s;
-}
-.pry-nuevos-container .pry-nuevos-desc .pry .img-container a img:hover{
-    transform: scale(1.3);
-}
-.pry-nuevos-container .pry-nuevos-desc .pry .img-container{
-    width: 65%;
-    height: 500px;
+    height: 350px; /* Ajustar la altura del contenedor de video */
+    overflow: hidden;
     margin-bottom: 20px;
 }
 
@@ -104,12 +106,15 @@
 }
 
 .pry-nuevos-container .pry-nuevos-desc .pry p{
-    width: 60%;
+    width: 80%; /* Aumentar el ancho del cartelito para que coincida mejor con el video */
     text-align: center;
     color: grey;
+    margin-top: -50px; /* Reducir la superposición del cartelito sobre el video */
     text-transform: uppercase;
     border: 1px solid black;
     padding: 10px 0;
+    background-color: white;
+    z-index: 10;
 }
 
 @media screen and (max-width:768px){
@@ -132,7 +137,12 @@
     }
 
     .pry-nuevos-container .pry-nuevos-desc .pry .img-container{
-        width: 90%;
+        width: 100%;
+        height: 300px; /* Ajustar la altura para pantallas pequeñas */
+    }
+
+    .pry-nuevos-container .pry-nuevos-desc .pry p{
+        width: 70%; /* Ajustar el ancho del cartelito en pantallas pequeñas */
     }
 }
 
@@ -146,7 +156,6 @@
     }
 
     .pry-nuevos-container .pry-nuevos-desc .pry p{
-        width: 60%;
+        width: 70%; /* Ajustar para pantallas más pequeñas */
     }
-    
 }
