--- a/public/css/proyectos.css
+++ b/public/css/proyectos.css
@@ -11,24 +11,43 @@
     margin-bottom: 60px;
     background: linear-gradient(to right, #717375, #afe2e2);
 }
+.pry-dest-container .titulo {
+    margin-top: 8%;
+    background: linear-gradient(to right, #717375, #9ac4c4);
+    width: 600px; /* Ancho del cuadro */
+    margin-left: 2%;
+    border-radius: 20%;
+    height: 300px; /* Altura del cuadro */
+    border: 5px solid transparent; /* Borde inicial */
+    animation: dynamic-border 3s infinite; /* Animación infinita */
+}
 
-.pry-dest-container h2 {
+/* Definición de la animación */
+@keyframes dynamic-border {
+    0% {
+        border-color: #d2dcfd; /* Color inicial */
+    }
+    50% {
+        border-color: #c5cde4; /* Color intermedio */
+    }
+    100% {
+        border-color: #989ba0; /* Color final (mismo que el inicial) */
+    }
+}
+
+.pry-dest-container .titulo h2 {
     text-transform: uppercase;
     font-size: 66px;
-    color: whitesmoke;
+    color: rgb(255, 255, 255);
     font-family: 'Proxima-Nova-Light';
-    margin-top: 180px;
+    margin-top: 13%;
     margin-bottom: 40px;
     text-align: center;
     width: 30%;
-    margin-left: 10%;
+    margin-left: 15%;
     margin-right: auto;
     font-weight: 200%;
-    text-shadow: 
-    3px 3px 1px rgb(27, 182, 174),
-    5px 5px 2px rgb(193, 227, 247),
-    8px 8px 3px blue;
-    ;
+    z-index: 1;
 }
 
 
@@ -75,7 +94,7 @@
     font-size: 36px;
     color: #0e4b9c;
     font-family: 'Proxima-Nova-Light';
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     text-align: center;
 }
 
@@ -86,7 +105,7 @@
 }
 
 .pry-nuevos-container .pry-nuevos-desc .pry{
-    width: 45%;  /* Aumentar el ancho de cada contenedor de video */
+    width: 40%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -94,28 +113,49 @@
 
 .pry-nuevos-container .pry-nuevos-desc .pry .img-container{
     width: 100%;
-    height: 350px; /* Ajustar la altura del contenedor de video */
+    height: 400px;
+    margin-bottom: 20px;
     overflow: hidden;
+}
+
+.pry-nuevos-container .pry-nuevos-desc .pry .img-container a,
+.pry-nuevos-container .pry-nuevos-desc .pry .img-container a img{
+    width: 100%;
+    height: 80%;
+}
+.pry-nuevos-container .pry-nuevos-desc .pry .img-container a img{
+    transform: scale(1);
+    transition: .8s;
+}
+.pry-nuevos-container .pry-nuevos-desc .pry .img-container a img:hover{
+    transform: scale(1.3);
+}
+.pry-nuevos-container .pry-nuevos-desc .pry .img-container{
+    width:100%;
+    height: 500px;
     margin-bottom: 20px;
 }
 
 .pry-nuevos-container .pry-nuevos-desc .pry .img-container a,
 .pry-nuevos-container .pry-nuevos-desc .pry .img-container a img{
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
-.pry-nuevos-container .pry-nuevos-desc .pry p{
-    width: 80%; /* Aumentar el ancho del cartelito para que coincida mejor con el video */
+.pry-nuevos-container .pry-nuevos-desc .pry p {
+    width: 60%;
     text-align: center;
     color: grey;
-    margin-top: -50px; /* Reducir la superposición del cartelito sobre el video */
+    background-color: white;
     text-transform: uppercase;
     border: 1px solid black;
-    padding: 10px 0;
-    background-color: white;
-    z-index: 10;
+    padding: 10px 15px; /* Ajuste de padding para mejor proporción */
+    margin: 10px auto; /* Centra el cuadro horizontalmente y ajusta el espacio */
+    position: relative; /* Permite un mejor control del posicionamiento */
+    top: -20%; /* Ajusta la posición vertical del texto */
+    z-index: 1;
 }
+
 
 @media screen and (max-width:768px){
 
