--- a/public/css/shared/header.css
+++ b/public/css/shared/header.css
@@ -39,6 +39,10 @@ a{
     left: 0;
     width: 100%;
     z-index: 100;
+
+}
+header a {
+    text-decoration: none !important;
 }
 .header .logo-container{
 	width:220px;
